status/li/linenoise_ada/1.1.1/macos/darwin-23.4.0/gnat=10.3.2/linenoise_ada-1.1.1.yaml.log
Test ran at 2024-05-16 13:34:49.918060+00:00

SOLUTION:
linenoise_ada=1.1.1: Bindings to the Linenoise line editing library
Origin: source archive v1.1.1.tar.gz at https://git.sr.ht/~nytpu/linenoise-ada/archive/v1.1.1.tar.gz with hashes sha256:09aa2452b34c2714858e06cceeae52f366a79f452fec667d5a78d3252a31b40f, sha512:c098d1281992702d8fd889e73d19feeaa10770f00bdb40ad0cb1627cd6cb48bf8272e8cfe8fc5fb4a0fa64125f9b4d4a04e43012a06ba9dda1ff21695b11cf04
Available when: (case OS is Linux => True, Macos => True, Windows => False, others => False)
Properties:
   Author: nytpu
   Description: Bindings to the Linenoise line editing library
   GPR Scenario: BUILD_MODE := debug | optimize
   GPR Scenario: COMPILE_CHECKS := enabled | disabled
   GPR Scenario: CONTRACTS := enabled | disabled
   GPR Scenario: LIBRARY_TYPE := dynamic | relocatable | static | static-pic
   GPR Scenario: RUNTIME_CHECKS := enabled | disabled
   GPR Scenario: STYLE_CHECKS := enabled | disabled
   License: BSD-2-Clause
   Maintainer: nytpu <alex@nytpu.com>
   Maintainers_Logins: nytpu
   Name: linenoise_ada
   Project_File: linenoise.gpr
   Tag: linenoise
   Tag: readline
   Tag: line-editing
   Version: 1.1.1
   Website: https://git.sr.ht/~nytpu/linenoise-ada


LOG:
Note: Deploying linenoise_ada=1.1.1...
#=#=#                                                                         
##O#-#                                                                        
##O=#  #                                                                      
#=#=-#  #                                                                     
Note: Building linenoise_ada/linenoise.gpr...
Setup
   [mkdir]        object directory for project Linenoise
   [mkdir]        library directory for project Linenoise
Compile
   [C]            linenoise-c.c
   [C]            utf8.c
   [C]            helpers.c
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:62,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/src/helpers.c:5:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_types.h:27,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/unistd.h:71,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/src/linenoise/utf8.c:44:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/termios.h:26,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/src/linenoise/linenoise-c.c:106:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of helpers.c failed
   compilation of utf8.c failed
   compilation of linenoise-c.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/f2ff2be4-cefe-4422-b3fc-075d42068d60/linenoise_ada_1.1.1_09aa2452/linenoise.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104145000
Call stack traceback locations:
0x104a4d415 0x104720e83 0x104933df9 0x104934581 0x104894ac3 0x104892f99 0x1048af873 0x1048fbdc1 0x1048fa81a 0x1048af9b8 0x104893349 0x1041a49c1 0x1041b5578 0x1041ba01c 0x10424005c 0x10424b3b8 0x104146605 0x104149914


Warning: linenoise_ada=1.1.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
